# maskrcnn-benchmark

./: .gitignore  ABSTRACTIONS.md  Dockerfile  INSTALL.md  LICENSE.md  MODEL_ZOO.md  README.md  TROUBLESHOOTING.md  WELL_KNOWN_ISSUE.md  coco_semantics.pickle  config.yml  det.py  docker_test.sh  environment.yaml  last_checkpoint  log.txt  requirements.txt  setup.py  test.sh  train.sh  trainval_net.py
configs/: coco_faster_rcnn.yaml  coco_mask_rcnn.yaml  coco_mask_rcnn_fpn.yaml  coco_rotated_faster_rcnn.yaml  coco_rotated_mask_rcnn.yaml  coco_rotated_mask_rcnn_fpn.yaml  coco_rotated_rpn_only.yaml  coco_rotated_rpn_only_fpn.yaml  coco_rpn_only.yaml  coco_rpn_only_fpn.yaml  e2e_faster_rcnn_R_101_FPN_1x.yaml  e2e_faster_rcnn_R_101_FPN_1x_sub_20.yaml  e2e_faster_rcnn_R_101_FPN_1x_sub_6.yaml  e2e_faster_rcnn_R_101_FPN_1x_sub_6_outlier.yaml  e2e_faster_rcnn_R_101_FPN_1x_sub_6_unknown.yaml  e2e_faster_rcnn_R_50_C4_1x.yaml  e2e_faster_rcnn_R_50_C4_1x_micr.yaml  e2e_faster_rcnn_R_50_C4_1x_micr_pred.yaml  e2e_faster_rcnn_R_50_FPN_1x.yaml  e2e_faster_rcnn_R_50_FPN_1x_sub_6.yaml  e2e_faster_rcnn_X_101_32x8d_FPN_1x.yaml  e2e_faster_rcnn_fbnet.yaml  e2e_faster_rcnn_fbnet_600.yaml  e2e_faster_rcnn_fbnet_chamv1a_600.yaml  e2e_faster_rcnn_mobilenet.yaml  e2e_keypoint_rcnn_R_50_FPN_1x.yaml  e2e_mask_rcnn_R_101_FPN_1x.yaml  e2e_mask_rcnn_R_50_C4_1x.yaml  e2e_mask_rcnn_R_50_FPN_1x.yaml  e2e_mask_rcnn_R_50_FPN_1x_Tencent.yaml  e2e_mask_rcnn_R_50_FPN_1x_Tencent_noworker.yaml  e2e_mask_rcnn_R_50_FPN_1x_b64.yaml  e2e_mask_rcnn_R_50_FPN_1x_periodically_testing.yaml  e2e_mask_rcnn_X_101_32x8d_FPN_1x.yaml  e2e_mask_rcnn_fbnet.yaml  e2e_mask_rcnn_fbnet_600.yaml  e2e_mask_rcnn_fbnet_xirb16d_dsmask.yaml  e2e_mask_rcnn_fbnet_xirb16d_dsmask_600.yaml  e2e_ms_rcnn_R_50_FPN_1x_Tencent.yaml  kitti_e2e_faster_rcnn_R_50_C4_1x.yaml  (+7 more)
demo/: MICR_MASK-RCNN-demo.py.ipynb  MICR_Mask_R-CNN_demo.ipynb  Mask_R-CNN_demo.ipynb  README.md  infer_demo.py  micr_demo.py  panoptic_segmentation_shapes_dataset_demo.ipynb  potato_predictor.py  predictor.py  predictor_tencent.py  roi_encoding.py  shapes_dataset_demo.ipynb  shapes_demo.py  shapes_pruning.ipynb  subpredictor.py  test.py  trace_model.py  traced_model.cpp  video.py  video_extractor.py  video_multi_object_tracking.py  visualization.py  webcam.py
demo/cpp/: CMakeLists.txt  traced_model.cpp
docker/: Dockerfile  Dockerfile-jupyter  jupyter_notebook_config.py
maskrcnn_benchmark/: __init__.py  _custom_ops.py
maskrcnn_benchmark/csrc/custom_ops/: CMakeLists.txt  custom_ops.cpp
my_tools/: conv_cuboid.py  conv_cuboid_keypoints.py  conv_cuboid_old.py  conv_depth.py  conv_depth2.py  conv_pose.py  conv_pose2.py  conv_rotation_vector.py  conv_semantic_seg.py  conv_test.py  conv_vertex_field.py  evaluate_predictions.py  giou_loss.py  infer_demo.py  vgg16.py  (+10 more)
(+388 files in other folders)
